[gd_scene load_steps=7 format=3 uid="uid://cfd7c0lk857ng"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_fv6p5"]
[ext_resource type="FontFile" uid="uid://biqtga8moh7ah" path="res://fonts/lilita_one_regular.ttf" id="2_4od7x"]

[sub_resource type="LabelSettings" id="LabelSettings_fpmwk"]
font = ExtResource("2_4od7x")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[sub_resource type="LabelSettings" id="LabelSettings_dq8fl"]
font = ExtResource("2_4od7x")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_viv68"]
bg_color = Color(0, 0, 0, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rt5i"]
bg_color = Color(0, 1, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fv6p5")

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="."]
offset_left = 48.0
offset_top = 627.0
offset_right = 138.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_fpmwk")
vertical_alignment = 2

[node name="Gun HUD" type="Node" parent="."]

[node name="Ammo" type="Label" parent="Gun HUD"]
offset_left = 1100.0
offset_top = 627.0
offset_right = 1229.0
offset_bottom = 672.0
text = "30 / 30"
label_settings = SubResource("LabelSettings_dq8fl")

[node name="ReloadingBar" type="ProgressBar" parent="Gun HUD"]
visible = false
offset_left = 1102.0
offset_top = 586.0
offset_right = 1218.0
offset_bottom = 613.0
theme_override_styles/background = SubResource("StyleBoxFlat_viv68")
theme_override_styles/fill = SubResource("StyleBoxFlat_7rt5i")
show_percentage = false

[node name="ReloadingText" type="Label" parent="Gun HUD"]
visible = false
offset_left = 1080.0
offset_top = 537.0
offset_right = 1235.0
offset_bottom = 582.0
text = "Reloading"
label_settings = SubResource("LabelSettings_dq8fl")

[node name="ReloadTimer" type="Timer" parent="Gun HUD"]
one_shot = true
